k8s/pro/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: pro
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
