k8s/pro/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: pro
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
    - name: console
      port: 9001
