k8s/pro/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: pro
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
