k8s/pro/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-pro
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - host: grafana-pro.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-pro-grafana
                port:
                  number: 80
